assets/src/components/editing/toolbar/Toolbar.modules.scss
.toolbar {
  display: flex;
  flex-direction: row;
  background: #f8f9fb;
  border: 2px solid #e5e6e8;
  border-radius: 8px;

  z-index: var(--z-30);
  box-shadow: 6px 6px 24px -12px rgba(0, 0, 0, 0.8);
  -webkit-box-shadow: 6px 6px 24px -12px rgba(0, 0, 0, 0.8);

  &.fixedToolbar {
    border: none;
    border-bottom: 2px solid #e5e6e8;
    border-radius: 0px;
    margin-bottom: 0;
    box-shadow: none;
    -webkit-box-shadow: none;

    .toolbarGroup {
      margin: 0;
    }

    .toolbarButton {
      &:first-of-type {
        margin-left: 0;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
      }

      &:last-of-type {
        margin-right: 0;
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
      }
    }
  }
}

.toolbarGroup {
  display: flex;
  flex-direction: row;
  border-left: 2px solid #e5e6e8;

  &:first-of-type {
    border-left: none;

    .toolbarButton {
      &:first-of-type {
        border-top-left-radius: 6px;
        border-bottom-left-radius: 6px;
      }
    }
  }

  &:last-of-type {
    .toolbarButton {
      &:last-of-type {
        border-top-right-radius: 6px;
        border-bottom-right-radius: 6px;
      }
    }
  }
}

.toolbarButton {
  display: flex;
  flex-direction: row;
  font-weight: 400;
  color: #6b7281;
  text-align: center;
  vertical-align: middle;
  align-items: center;
  user-select: none;
  background-color: transparent;
  padding: 0.375rem 0.6rem;
  line-height: 1;
  border: none;

  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;

  &:hover {
    background-color: #edeef0;
  }

  &.active {
    background: #6b7281;
    color: #f8f9fb;
  }
}

.toolbarButtonGroup {
  display: flex;
  flex-direction: row;
}

.toolbarButtonContent {
  height: 24px;
  min-width: 24px;
  padding: 5px;
}

.icon {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 24px;
  min-width: 24px;
}

.buttonText {
  text-align: center;
}

.dropdownGroup {
  display: flex;
  flex-direction: column;
  padding: 8px;
  overflow-y: auto;
  background: #f8f9fb;
  border: 2px solid #e5e6e8;
  font-size: 0.875rem;

  .toolbarButton {
    display: inline-flex;
    align-items: center;
    text-align: left;
    border-radius: 6px;

    &:first-of-type,
    &:last-of-type {
      margin-left: 0px;
      margin-right: 0px;
      border-radius: 6px;
    }
  }
}

.description {
  margin-left: 6px;
  line-height: 32px;
}

:global(html.dark) {
  .toolbar {
    background: #3e3f44;
    border-color: #55565d;
    box-shadow: 6px 6px 24px -12px rgba(0, 0, 0, 0.6);
    -webkit-box-shadow: 6px 6px 24px -12px rgba(0, 0, 0, 0.6);

    &.fixedToolbar {
      border-color: #55565d;
    }
  }

  .toolbarButton {
    color: #dee2f2;
  }

  .toolbarGroup {
    border-color: #55565d;
  }

  .toolbarButton {
    &:hover {
      background-color: #2f2f30;
    }

    &.active {
      background: #55565d;
      color: #f8f9fb;
    }
  }

  .dropdownGroup {
    background: #3e3f44;
    border-color: #55565d;
  }
}

